Vorher keine Demofunktion. Jetzt bei OK Demo. (?)

--- a/index.html
+++ b/index.html
@@ -614,9 +614,11 @@
       50%      { transform: scale(1.015); filter: brightness(1.05); }
     }
 
+    /* Blinken der Schrift: langsamer */
     .kippspeedBlock.attention .kippspeedLabel{
-      animation: kspBlink 0.75s infinite;
+      animation: kspBlink 1.2s infinite;
     }
+    /* Pulsieren (Slider+Icons) bleibt wie vorher */
     .kippspeedBlock.attention .sliderRow{
       animation: sliderPulse 0.9s infinite;
       transform-origin: 50% 50%;
@@ -664,7 +666,6 @@
       margin-left: 0;
     }
 
-    /* (00/11) bewusst kleiner */
     .progressText{
       color: var(--ui-text);
       font-weight: 900;
@@ -856,7 +857,7 @@
       </div>
     </div>
 
-    <!-- UI Panel (unten) ist zu Beginn unsichtbar -->
+    <!-- UI Panel (unten) bleibt vorerst immer unsichtbar -->
     <div class="uiPanel uiHidden" id="uiPanel" aria-label="UI Panel">
       <div class="uiRow">
         <div style="display:flex; align-items:flex-end; gap: 12px;">
@@ -893,7 +894,6 @@
 
     const arrowPng  = document.getElementById("kippArrowPng");
     const hudGroup  = document.getElementById("hudGroup");
-    const kippLabel = document.getElementById("kippLabel");
 
     function sleep(ms){ return new Promise(res => setTimeout(res, ms)); }
 
@@ -911,8 +911,8 @@
 
     function getTiming(){
       const v = Number(speedSlider.value || 3);
-      const holdMsFull = Math.max(800, Math.round(3200 - v * 266)); // W-Ansicht
-      const holdMsKip  = Math.max(520, Math.round(2200 - v * 186)); // KIP-Ansicht
+      const holdMsFull = Math.max(800, Math.round(3200 - v * 266));
+      const holdMsKip  = Math.max(520, Math.round(2200 - v * 186));
       return { holdMsFull, holdMsKip };
     }
 
@@ -960,24 +960,8 @@
 
     function renderNumber(span, n){
       if(!span) return;
-      if(n === null || n === undefined){
-        span.textContent = "";
-        return;
-      }
-      span.textContent = String(n);
+      span.textContent = (n === null || n === undefined) ? "" : String(n);
     }
-
-    let planned = [
-      [null,null,null,null],
-      [null,null,null,null],
-      [null,null,null,null],
-    ];
-    let sets = [
-      [null,null,null,null],
-      [null,null,null,null],
-      [null,null,null,null],
-    ];
-    let assigned = [false,false,false];
 
     let rotIndex  = 0;
     let faceIndex = 0;
@@ -1072,7 +1056,6 @@
     }
 
     function hideChoiceHUD(){ hudGroup.classList.add("hidden"); }
-    function showChoiceHUD(){ hudGroup.classList.remove("hidden"); }
 
     function advanceFullCW(){
       rotIndex  = (rotIndex + 1) % 4;
@@ -1113,7 +1096,6 @@
 
       const { holdMsFull, holdMsKip } = getTiming();
 
-      // 7 Bilder: W, KIP, W, KIP, W, KIP, W  (alles ohne Zahlen)
       resetToStartView(); // W1/Q0 + Pfeil
 
       // 1) W
@@ -1163,9 +1145,8 @@
       demoRunning = false;
     }
 
-    // Demo starten, wenn Regler "in Ruhe gelassen" wurde (release/change)
-    function triggerDemoAfterRelease(){
-      // falls eine Demo gerade läuft: abbrechen + neu starten
+    function triggerDemoNow(){
+      // Demo abbrechen + neu starten
       demoToken++;
       demoRunning = false;
       runSpeedDemo();
@@ -1174,16 +1155,9 @@
     // OK/X Buttons
     btnOk.addEventListener("click", () => {
       stopAttention();
-      // Demo ggf. abbrechen
-      demoToken++;
-      demoRunning = false;
-
-      // Speed-Panel bleibt (für später evtl. ausblendbar) – hier: Panel bleibt sichtbar
-      // und das untere Panel wird eingeblendet (wie besprochen: erst nach OK).
-      uiPanel.classList.remove("uiHidden");
-
-      // Startbutton-Text sicher setzen
-      btnStart.textContent = "KIPP ZAHLEN setzen";
+      triggerDemoNow(); // <<< OK startet die Demo (ohne Zahlen)
+      // uiPanel bleibt unsichtbar (kommt später)
+      uiPanel.classList.add("uiHidden");
     });
 
     btnExit.addEventListener("click", () => {
@@ -1192,7 +1166,6 @@
       if(!ok) return;
 
       // Platzhalter bis Startseite existiert:
-      // (Später: window.location.href = "start.html";)
       document.body.innerHTML = `
         <div style="min-height:100vh; display:flex; align-items:center; justify-content:center; font-family:system-ui; background:#000; color:#ead7be;">
           <div style="text-align:center;">
@@ -1203,23 +1176,11 @@
       `;
     });
 
-    // ===== bestehender Start-Flow (dein späterer Step) bleibt drin =====
-    let running = false;
-    function sleepP(ms){ return new Promise(res => setTimeout(res, ms)); }
-
-    async function runShow7(){
-      if(running) return;
-      running = true;
-      btnStart.disabled = true;
-
-      // hier später deine echte Zahlenlogik – aktuell bleibt das bestehen
+    // ===== bestehender Start-Flow (später) bleibt drin =====
+    btnStart.addEventListener("click", () => {
+      // bleibt Platzhalter
       btnStart.textContent = "KIPP ZAHLEN mischen";
-
-      btnStart.disabled = false;
-      running = false;
-    }
-
-    btnStart.addEventListener("click", runShow7);
+    });
 
     // Slider Events: beim Bewegen Aufmerksamkeit stoppen + Tick highlight
     speedSlider.addEventListener("input", () => {
@@ -1234,7 +1195,7 @@
     speedSlider.addEventListener("change", () => {
       stopAttention();
       updateTickActive();
-      triggerDemoAfterRelease();
+      triggerDemoNow();
     });
 
     window.addEventListener("load", () => {
@@ -1248,7 +1209,7 @@
       requestAnimationFrame(setKippspeedStripHeight);
       setTimeout(setKippspeedStripHeight, 80);
 
-      // UI Panel unten: Start = unsichtbar
+      // UI Panel unten: Start = unsichtbar (kommt später)
       uiPanel.classList.add("uiHidden");
 
       // Startzustand: W1/Q0 ohne Zahlen + Pfeil sichtbar
