--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     .board{
       position:relative;
       width: 100%;
-      height: 0;
+      height: auto;
       aspect-ratio: 1 / 1;
       box-sizing: border-box;
       background: var(--box-black);
